--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 node_modules
 
 # Adonis directory for storing tmp files
-tmp
+tmp/uploads/*
+!tmp/uploads/.gitkeep
 
 # Environment variables, never commit this file
 .env
